Bug 693928: Fix random orange from LifoAlloc debug memset. (r=luke)